# garagedoor-esphome

./: .gitignore  .pre-commit-config.yaml  README.md  garagedoor.yaml  internal-garagedoor.yaml  pyproject.toml
.github/workflows/: ci.yml
deployment/: README.md
deployment/scripts/: install-esphome-service.sh  install-gpio-safeguard-service.sh
deployment/systemd/: esphome-garagedoor.service  gpio-safeguard.service
docs/: README_ESPHOME_SERVICE.md  README_TESTING.md  homeassistant_test_plan.md
scripts/monitoring/: gpio_log_analyzer.py  gpio_monitor.py  gpio_safeguard.py
scripts/testing/: door_cycler.py  ha_test_runner.py  pigs_double.py
tests/config/: test_config.example.json
